# OpenCV4_Linux

./: 001imread.cpp  002Mat.cpp  003Brightimg.cpp  004bit.cpp  005pixel.cpp  007channel.cpp  008hist.cpp  009mulfig.cpp  010destroyWindow.cpp  011resizeWindow.cpp  012MouseEvent.cpp  013Trackbar.cpp  CMakeLists.txt  testOpenCV.cpp
001imread_and_imwriter/: CMakeLists.txt
002Mat/: CMakeLists.txt  main.cpp
003BrightImg/: CMakeLists.txt  main.cpp
004Bit/: CMakeLists.txt  main.cpp
005pixel/: CMakeLists.txt  main.cpp
006plot/: CMakeLists.txt  main.cpp
007channel/: CMakeLists.txt  main.cpp
008hist/: CMakeLists.txt  main.cpp
009mulfig/: CMakeLists.txt  main.cpp
testOpenCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_install
